syntax = "proto3";

package buDing;

import "google/protobuf/empty.proto";

option go_package = '../to';
option java_package = "com.buding.job.grpc.to";
option java_multiple_files = true;

service Instance {
    rpc dispatch (Request) returns (google.protobuf.Empty); //调度
}

message Request {
    string jobHandler = 1;
    string jobParams = 2;
    int64 callbackId = 10;
}